--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ seo:
 
 
 <!-- intro section -->
-<section class="grid p-24 md:grid-cols-6 editable">
+<section class="grid md:p-24 p-10 md:grid-cols-6 editable">
   <div class="col-span-4 flex justify-center">
     <h2 class="text-4xl"> LIVING <span class="italics"> our</span> LIVES<span class="italics">to the </span> <br>FULLEST <span class="italics"> so that </span> once is ENOUGH. </h2>
   </div>
